--- a/index.html
+++ b/index.html
@@ -4,10 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="/src/style/main.css">
     <title>Lux</title>
 </head>
 <body>
+    <header>
+        <div class="headerWrapper">
+            <div class="logo"></div>
+            <div class="location"></div>
+            <div class="phoneNumber"></div>
+            <nav>
+                <ul>
+                    <li class="navItem"><a href="#"></a></li>
+                    <li class="navItem"><a href="#"></a></li>
+                    <li class="navItem"><a href="#"></a></li>
+                    <li class="navItem"><a href="#"></a></li>
+                    <li class="navItem"><a href="#"></a></li>
+                </ul>
+            </nav>
+            <div class="callBack"></div>
+        </div>
+    </header>
     
 </body>
 </html>
