header layout update

--- a/index.html
+++ b/index.html
@@ -12,15 +12,18 @@
     <header>
         <div class="headerWrapper">
             <div class="logo"></div>
-            <div class="location"></div>
+            <div class="location">
+                <div class="location--point"></div>
+                <p class="location-text">Республика Беларусь, г. Бобруйск, ул. Спартаковская 7, к.2</p>
+            </div>
             <div class="phoneNumber"></div>
             <nav>
                 <ul>
-                    <li class="navItem"><a href="#"></a></li>
-                    <li class="navItem"><a href="#"></a></li>
-                    <li class="navItem"><a href="#"></a></li>
-                    <li class="navItem"><a href="#"></a></li>
-                    <li class="navItem"><a href="#"></a></li>
+                    <li class="navItem"><a href="#">Услуги</a></li>
+                    <li class="navItem"><a href="#">География</a></li>
+                    <li class="navItem"><a href="#">Наши работы</a></li>
+                    <li class="navItem"><a href="#">Производство</a></li>
+                    <li class="navItem"><a href="#">Сертификаты</a></li>
                 </ul>
             </nav>
             <div class="callBack"></div>
