--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <header>
         <div class="headerWrapper">
-            <div class="logo"></div>
+            <a href="/" class="logo">
+                <img src="/src/img/almaz-logo1.png" alt="logo almaz">
+            </a>
             <div class="location">
                 <div class="location--point"></div>
                 <p class="location-text">Республика Беларусь, г. Бобруйск, ул. Спартаковская 7, к.2</p>
