--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
                 <div class="location--point"></div>
                 <p class="location-text">Республика Беларусь, г. Бобруйск, ул. Спартаковская 7, к.2</p>
             </div>
-            <div class="phoneNumber"></div>
+            <div class="phoneNumber">
+                <p>+375 29 673-70-73</p>
+            </div>
             <nav>
                 <ul>
                     <li class="navItem"><a href="#">Услуги</a></li>
