update header, added grid-template

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 <img src="/src/img/almaz-logo1.png" alt="logo almaz">
             </a>
             <div class="location">
-                <div class="location--point"></div>
-                <p class="location-text">Республика Беларусь, г. Бобруйск, ул. Спартаковская 7, к.2</p>
+                <div class="location--png"></div>
+                <p class="location--text">Республика Беларусь, г. Бобруйск, ул. Спартаковская 7, к.2</p>
             </div>
             <div class="phoneNumber">
                 <p>+375 29 673-70-73</p>
@@ -30,7 +30,10 @@
                     <li class="navItem"><a href="#">Сертификаты</a></li>
                 </ul>
             </nav>
-            <div class="callBack"></div>
+            <div class="callBack">
+                <div class="callBack--png"></div>
+                <p class="callBack--text">Перезвонить вам?</p>
+            </div>
         </div>
     </header>
     
