--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <header>
         <div class="headerWrapper">
+            <div class="firstHeader">
             <a href="/" class="logo">
                 <img src="/src/img/almaz-logo1.png" alt="logo almaz">
             </a>
@@ -33,6 +34,18 @@
             <div class="callBack">
                 <div class="callBack--png"></div>
                 <p class="callBack--text">Перезвонить вам?</p>
+            </div>
+         </div>
+        </div>
+        <div class="secondHeader">
+            <div class="secondHeader-title-block">
+                <h1 class="title">
+                    Оптовая продажа<br> и контрактное производство<br> зеркал для России и Европы
+                </h1>
+                <p class="text">
+                    Бесплатная доставка при заказе на сумму более 50 000 рублей!
+                </p>
+                <button id="modalShow">Узнать подробности</button>
             </div>
         </div>
     </header>
