--- a/index.html
+++ b/index.html
@@ -47,6 +47,21 @@
                 </p>
                 <button id="modalShow" class="showButton">Узнать подробности</button>
             </div>
+            <div class="reason">
+                <div class="reason-world">
+                    <div class="world"></div>
+                    <p>«Алмаз-люкс»<br> 30 лет на рынке</p>
+                </div>
+                <div class="reason-layout">
+                    <div class="layout"></div>
+                    <p>/* Более 2000<br> моделей зеркал */</p>
+                </div>
+                <div class="reason-todo">
+                    <div class="todo"></div>
+                    <p>Контроль качества<br> и гарантия</p>
+                </div>
+            </div>
+
 
             <div class="showModal" id="callbackModal">
                 <div class="text-content">
